# ledger

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  remux-extension.json
crates/api/: Cargo.toml  README.md
crates/api/src/: dto.rs  error.rs  jobs.rs  lib.rs  main.rs  presenters.rs  routes.rs  session_protocol.rs  session_ws.rs  state.rs  time.rs
crates/book/: Cargo.toml
crates/book/src/: lib.rs  order_book.rs
crates/cache/: Cargo.toml
crates/cache/src/: cache.rs  cell.rs  error.rs  key.rs  lib.rs  watch.rs
crates/cache/tests/: cache.rs  key.rs  watch.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/domain/: Cargo.toml  README.md
crates/domain/src/: event.rs  lib.rs  projection.rs  sim.rs
crates/ingest/: Cargo.toml  README.md
crates/ingest/src/: lib.rs  pipeline.rs  preprocess.rs
crates/ledger/: Cargo.toml  README.md
crates/ledger-book/: Cargo.toml  README.md
crates/ledger-book/src/: lib.rs  order_book.rs
crates/ledger-cli/: Cargo.toml  README.md
crates/ledger-cli/src/: main.rs
crates/ledger-core/: Cargo.toml  README.md
crates/ledger-core/src/: event.rs  lib.rs  market_day.rs  time.rs
crates/ledger-domain/src/: artifact_codec.rs  lib.rs  storage.rs
crates/ledger-ingest/: Cargo.toml  README.md
crates/ledger-ingest/src/: book_check.rs  databento_downloader.rs  lib.rs  pipeline.rs  preprocess.rs  provider.rs
crates/ledger-replay/: Cargo.toml  README.md
crates/ledger-replay/src/: execution.rs  lib.rs  simulator.rs  visibility.rs
crates/ledger-runtime/: Cargo.toml  README.md
crates/ledger-runtime/src/: cell.rs  data_plane.rs  error.rs  key.rs  lib.rs  projection.rs
crates/ledger-runtime/src/runtime/: dependency.rs  external_write.rs  mod.rs  projection_queue.rs  projection_registry.rs
crates/ledger-runtime/tests/: data_plane.rs  external_write.rs  key.rs  projection.rs  runtime_scheduler.rs
crates/ledger-store/: Cargo.toml  README.md
crates/ledger-store/src/: catalog.rs  keys.rs  lib.rs  local_store.rs  object_store.rs  r2_store.rs  store.rs
crates/ledger/src/: clock.rs  error.rs  lib.rs  progress.rs  replay_session.rs  session.rs  validation.rs
crates/ledger/src/feed/: mod.rs
crates/ledger/src/feed/es_replay/: artifact.rs  catalog.rs  cells.rs  codec.rs  dbn.rs  feed.rs  fetch.rs  mod.rs
crates/ledger/src/market/: day.rs  es_mbo.rs  mod.rs
crates/ledger/src/projection/: bars.rs  delivery.rs  digest.rs  graph.rs  metrics.rs  mod.rs  node.rs  registry.rs  runtime.rs  tick.rs  trade_prints.rs
crates/ledger/src/projection/base/: bars.rs  bbo.rs  cursor.rs  mod.rs  trades.rs
crates/ledger/tests/: artifact_codec.rs  clock.rs  es_replay_feed.rs  market_day.rs  projection_bars.rs  projection_delivery.rs  projection_spec.rs  session.rs
crates/ledger/tests/support/: mod.rs
crates/remux/: Cargo.toml
crates/remux/src/: error.rs  hydrate.rs  jobs.rs  main.rs  methods.rs  rpc.rs  session.rs
crates/replay/: Cargo.toml  README.md
crates/replay/src/: execution.rs  feed.rs  lib.rs  simulator.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: component.rs  error.rs  handle.rs  lib.rs  process.rs  projection.rs  schema.rs  snapshot.rs  task.rs  worker.rs  write.rs
crates/runtime/src/runtime/: dependency.rs  external_write.rs  mod.rs  projection_registry.rs  task_queue.rs  task_registry.rs
crates/runtime/tests/: component.rs  external_write.rs  projection.rs  runtime_scheduler.rs  worker.rs
crates/store/: Cargo.toml  README.md
crates/store/src/: cache.rs  catalog.rs  descriptor.rs  error.rs  hash.rs  id.rs  keys.rs  lib.rs  local_objects.rs  local_store.rs  object_store.rs  r2_store.rs  registry.rs  remote_store.rs  store.rs  test_util.rs
crates/store/tests/: id.rs  registry.rs  store.rs
docs/: atomic_snapshot_projection_delivery_implementation_spec.md  cache_runtime_split_implementation_spec.md  cache_watch_implementation_spec.md  cli.md  data_control_plane_refactor.md  es_data_management_implementation_spec.md  ledger_feed_system_implementation_spec.md  ledger_projection_graph_implementation_spec.md  ledger_projection_system_implementation_spec.md  ledger_runtime_data_plane_implementation_spec.md  ledger_runtime_scheduler_implementation_spec.md  ledger_runtime_simplified_data_plane_proposal.md  ledger_session_transport_implementation_spec.md  ledger_tick_bars_implementation_spec.md  ledger_zero_origin_rebuild_implementation_spec.md  lens_frontend_cleanup_implementation_spec.md  lens_remux_onboarding_implementation_spec.md  lens_replay_chart_implementation_spec.md  lens_replay_view_design.md  local_data.md  phase1_architecture.md  remux_extension_implementation_spec.md  replay_cleanup_implementation_spec.md  replay_projection_near_term_plan.md  runtime_component_system_implementation_spec.md  storage_architecture.md  store_implementation_spec.md  study_graph_phased_implementation.md  study_graph_vision.md  vision.md
lens/: README.md  harness.html  index.html  package-lock.json  package.json  vite.config.ts
lens/src/: App.tsx  index.css  main.tsx
lens/src/components/: bar-picker.tsx  chart.tsx  date-picker.tsx  indicator-picker.tsx  speed-picker.tsx  theme-provider.tsx  time-picker-input.tsx  time-picker.tsx  top-bar.tsx  volume-profile.ts
lens/src/components/ui/: dropdown-menu.tsx  input-group.tsx  sonner.tsx
lens/src/dev/: harness.tsx
lens/src/features/data-center/: api.ts  data-center.tsx  data-table.tsx  dataset-status-badge.tsx  job-table.tsx  market-day-table.tsx  object-list.tsx  object-table.tsx  status-labels.ts  types.ts  use-store-object-ops.ts
lens/src/features/days/: api.ts  day-action-bar.tsx  day-feeds.tsx  day-list.tsx  day-status.ts  days.tsx  readiness.ts  types.ts
lens/src/features/replay/: accumulator.test.ts  accumulator.ts  api.ts  bar-frame-adapter.ts  delivery-health.test.ts  delivery-health.ts  projection-client.ts  projection-spec.test.ts  projection-spec.ts  replay.tsx  (+10 more)
lens/src/features/replay-prototype/: replay-prototype.tsx
lens/src/hooks/: use-replay.ts
lens/src/lib/: api.ts  dom-primitive.ts  mock-data.ts  tz.ts  ws-types.ts
(+13 files in other folders)
