[workspace]
members = [
    "crates/cache",
    "crates/runtime",
    "crates/store",
    "crates/api",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "internal"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-smithy-http-client = { version = "1", features = ["hyper-014"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "tls12", "webpki-tokio"] }
tempfile = "3"
tower-http = { version = "0.6", features = ["cors"] }
