[package]
name = "ledger-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ledger-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
ledger = { path = "../ledger" }
ledger-domain = { path = "../domain" }
ledger-store = { path = "../store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
