[package]
name = "ledger-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ledger-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
store = { path = "../store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
