[package]
name = "ledger-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
store = { path = "../store" }
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
