[package]
name = "ledger-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
dotenvy.workspace = true
ledger-domain = { path = "../ledger-domain" }
ledger-ingest = { path = "../ledger-ingest" }
ledger = { path = "../ledger" }
ledger-store = { path = "../ledger-store" }
tokio.workspace = true
serde_json.workspace = true
