[package]
name = "ledger-ingest"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dbn.workspace = true
ledger-book = { path = "../ledger-book" }
ledger-domain = { path = "../ledger-domain" }
ledger-store = { path = "../ledger-store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
time.workspace = true
databento.workspace = true

[dev-dependencies]
tempfile.workspace = true
