[package]
name = "ledger-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ledger-core = { path = "../ledger-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
chrono.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
