[package]
name = "ledger"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
indexmap.workspace = true
ledger-book = { path = "../book" }
ledger-domain = { path = "../domain" }
ledger-ingest = { path = "../ingest" }
ledger-replay = { path = "../replay" }
ledger-store = { path = "../store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
