[package]
name = "ledger"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
databento.workspace = true
dbn.workspace = true
serde.workspace = true
serde_json.workspace = true
store = { path = "../store" }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
