[package]
name = "ledger"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cache = { path = "../cache" }
chrono.workspace = true
chrono-tz.workspace = true
databento.workspace = true
dbn.workspace = true
runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true
store = { path = "../store" }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
store = { path = "../store", features = ["test-util"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
