[package]
name = "store"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
thiserror.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
aws-smithy-http-client.workspace = true
hyper-rustls.workspace = true

[features]
# In-memory RemoteStore double for downstream crates' tests.
test-util = []

[dev-dependencies]
store = { path = ".", features = ["test-util"] }
tempfile.workspace = true
